fixed icon alignment

--- a/skietbaan_fe/src/components/Documents.css
+++ b/skietbaan_fe/src/components/Documents.css
@@ -97,8 +97,7 @@
 }
 
 .document-image-icon {
-  margin-right: 20px;
-  float: right;
+  margin-left: 20px;
 }
 
 .documents-collapse {
